--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -3,6 +3,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/white" />
 
+    <bitmap
+        android:gravity="center"
+        android:src="@mipmap/splash_logo" />
     <!-- You can insert your own image assets here -->
     <!-- <item>
         <bitmap
